finally fix the goddamn flickering

--- a/chat/assets/style.styl
+++ b/chat/assets/style.styl
@@ -182,7 +182,7 @@ button
       display: inline-block
     .time
       display: inline-block
-      absolute: right 5px
+      float: right
       font-size: 9px
     p, ol, div, ul
       margin-bottom: 8px
